--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,52 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.10.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
     </dependencies>
+
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<snapshots/>-->
+            <!--<id>snapshots</id>-->
+            <!--<name>libs-snapshot</name>-->
+            <!--<url>http://10.85.59.116/artifactory/v1.0/artifacts/libs-snapshots-local</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+            <!--<id>libs-snapshot-local</id>-->
+            <!--<name>libs-snapshot-local</name>-->
+            <!--<url>http://10.85.59.116/artifactory/v1.0/artifacts/libs-snapshots-local</url>-->
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
+
+    <!--<distributionManagement>-->
+        <!--<snapshotRepository>-->
+            <!--<id>fk-art-snapshot</id>-->
+            <!--<name>libs-snapshot</name>-->
+            <!--<url>http://10.85.59.116/artifactory/v1.0/artifacts/libs-snapshots-local</url>-->
+        <!--</snapshotRepository>-->
+        <!--<repository>-->
+            <!--<id>fk-art-release</id>-->
+            <!--<name>libs-rel</name>-->
+            <!--<url>http://10.85.59.116/artifactory/v1.0/artifacts/libs-release-local</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
 
     <build>
         <plugins>
@@ -66,7 +111,6 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <finalName>http-nfr</finalName>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
                     <filters>
                         <filter>
